# Met-Num-TP3

./: .gitignore  CMakeLists.txt  Makefile  README.md  VectorMapMatrix.cpp  VectorMapMatrix.h  calcular_rayos.cpp  calcular_rayos.h  main.cpp  main_dibujar_rectas_matlab.cpp  test_main.cpp  util.cpp  util.h
100 imagenes CSV/: 1.2.826.0.1.3680043.2.656.1.138.100.csv  1.2.826.0.1.3680043.2.656.1.138.21.csv  1.2.826.0.1.3680043.2.656.1.138.22.csv  1.2.826.0.1.3680043.2.656.1.138.23.csv  1.2.826.0.1.3680043.2.656.1.138.24.csv  1.2.826.0.1.3680043.2.656.1.138.25.csv  1.2.826.0.1.3680043.2.656.1.138.26.csv  1.2.826.0.1.3680043.2.656.1.138.27.csv  1.2.826.0.1.3680043.2.656.1.138.28.csv  1.2.826.0.1.3680043.2.656.1.138.29.csv  1.2.826.0.1.3680043.2.656.1.138.30.csv  1.2.826.0.1.3680043.2.656.1.138.31.csv  1.2.826.0.1.3680043.2.656.1.138.32.csv  1.2.826.0.1.3680043.2.656.1.138.33.csv  1.2.826.0.1.3680043.2.656.1.138.34.csv  1.2.826.0.1.3680043.2.656.1.138.35.csv  1.2.826.0.1.3680043.2.656.1.138.36.csv  1.2.826.0.1.3680043.2.656.1.138.37.csv  1.2.826.0.1.3680043.2.656.1.138.38.csv  1.2.826.0.1.3680043.2.656.1.138.39.csv  1.2.826.0.1.3680043.2.656.1.138.40.csv  1.2.826.0.1.3680043.2.656.1.138.41.csv  1.2.826.0.1.3680043.2.656.1.138.42.csv  1.2.826.0.1.3680043.2.656.1.138.43.csv  1.2.826.0.1.3680043.2.656.1.138.44.csv  1.2.826.0.1.3680043.2.656.1.138.45.csv  1.2.826.0.1.3680043.2.656.1.138.46.csv  1.2.826.0.1.3680043.2.656.1.138.47.csv  1.2.826.0.1.3680043.2.656.1.138.48.csv  1.2.826.0.1.3680043.2.656.1.138.49.csv  1.2.826.0.1.3680043.2.656.1.138.50.csv  (+49 more)
Matlab files/: trazar_recta.m  (+6 more)
(+10 files in other folders)
